- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    6.4.0
- 
    None
- 
        
- 
        33202a58d7 (qt/qtdeclarative/dev) 33202a58d7 (qt/tqtc-qtdeclarative/dev)
Setting layer.enabled to true warps the displayed image.
To reproduce:
1) Run the attached example
2) layer.enabled is false, Bayer pattern is visible.
3) Set layer.enabled to true -> no Bayer pattern visible anymore.
There should be 3 texels between each black line, but when the layer is enabled there are 4 texels. Total number of texels silently changes from 128 to 160.
The problem is not reproducible only if "Display Scale and Layout" is set to 100% in the system settings.
- is duplicated by
- 
                    QTBUG-107689 ShaderEffectSource changes source texture -           
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-107691 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 438693,3 | Improve variable naming in QSGLayer implementation | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 438694,2 | Restore the interpretation of user-provided layer/effect textureSize | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
